# rare-weather-alerts

./: .gitignore  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: alerts.yml  digest.yml
config/: settings.yaml  spots.yaml
data/: greatest_hits.md  thresholds.json
docs/adr/: 0001-rarity-as-quality-percentile.md  0002-regional-rarity-and-push-gating.md
src/rare_weather/: __main__.py  backfill.py  config.py  dashboard.py  hours.py  notify.py  openmeteo.py  opportunities.py  pipeline.py  solar.py  thresholds.py
src/rare_weather/scores/: __init__.py  fog.py  lenticular.py  storm_light.py  sunrise_sunset.py
state/: state.json
tests/: test_lifecycle.py
